--- a/src/Pages/Dishes/dishes.css
+++ b/src/Pages/Dishes/dishes.css
@@ -5,5 +5,6 @@
   gap: 20px;
   padding: 20px;
   margin-top: 20px;
-  background-color: beige;
+  margin-top:60px;
+  /* background-color: beige; */
 }
