--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -52,3 +52,20 @@
     background-color: #000000 !important;
     color: #ffffff !important;
   }
+
+  /* Nav.css */
+.position-relative {
+  position: relative;
+}
+
+.cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  line-height: 1;
+}
