--- a/src/Components/chefs/Chefs.css
+++ b/src/Components/chefs/Chefs.css
@@ -36,9 +36,9 @@
         gap: 20px;
     }
     
-    .card {
+    /* .card {
         background: #26262D;
-        /* border-radius: 10px; */
+        
         box-shadow: 0 10px 10px rgb(0, 0, 0);
         overflow: hidden;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -49,7 +49,7 @@
     .card:hover {
         transform: translateY(-10px);
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    }
+    } */
     
     /* Image Holder */
     .img-holder {
