--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
     .footer {
         background-color: #151518;
         color: white;
-        box-shadow: 10px 10px 10px rgb(0, 0, 0);
+        box-shadow: 10px -10px 10px rgba(0, 0, 0, 0.234);
     }
     
     .footer .logo {
