--- a/src/Components/chefs/Chefs.css
+++ b/src/Components/chefs/Chefs.css
@@ -1,7 +1,7 @@
     /* General Styles */
     .chefs {
         padding: 60px 0;
-        background-color: #151518;;
+        /* background-color: #151518; */
     }
     
     .container {
