--- a/src/Pages/Orders/Order.css
+++ b/src/Pages/Orders/Order.css
@@ -7,7 +7,7 @@
   }
   
   .order-card {
-    background-color: #2a2a2a;
+    /* background-color: #2a2a2a; */
     border: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
