--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -1,4 +1,5 @@
 
+
 .card-container {
     position: relative;
     width: 18rem;
@@ -10,10 +11,6 @@
     transition: 0.3s ease-in-out;
     }
 
-    .card{
-        box-shadow: 10px 10px 15px rgb(0, 0, 0);
-        height: 313px;
-    }
     .card-container:hover {
         /* transform: scale(1.05); */
     }
@@ -57,7 +54,6 @@
     }
     .all-details{
         padding: 10px;
-        height: 183.55 px;
     }
     .card-details {
         margin-top: 10px;
@@ -89,18 +85,14 @@
     
     .add-btn {
         background-color: transparent;
-        /* color: white; */
+        color: white;
         border: white 2px solid;
         padding: 5px 10px;
         border-radius: 100%;
         cursor: pointer;
         font-size: 1rem;
     }
-    .add-btn-dark {
-        /* background-color: black; */
-        /* color: white; */
-        border: black 2px solid ;
-      }
+    
     .add-btn:hover {
         color: #ff3b3b;
         border-color: #ff3b3b;
@@ -141,6 +133,3 @@
     .food-description{
         color: rgb(180, 176, 176);
     }
-    
-
-    
