--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 .bg-custom-dark {
     background-color: #151518 !important;
   }
+  .bg-custom-light{
+    background-color: #dbdada !important;
+  }
