--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -70,6 +70,22 @@
   line-height: 1;
 }
 
+.wishlist-count {
+  position: absolute;
+  top: -8px; /* المسافة من الأعلى */
+  right: -10px; /* المسافة من اليمين */
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 10px;
+  font-weight: bold;
+  line-height: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
 
 .form-check-input:checked {
   background-color: #ff6b6b !important;
