--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@
     background-color: #151518 !important;
   }
   .bg-custom-light{
-    background-color: #dbdada !important;
+    background-color: #dfdede !important;
   }
