--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -58,33 +58,21 @@
   position: relative;
 }
 
-.cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background-color: red;
-  color: white;
-  border-radius: 50%;
-  padding: 2px 6px;
-  font-size: 12px;
-  line-height: 1;
-}
-
+.cart-count,
 .wishlist-count {
   position: absolute;
-  top: -8px; /* المسافة من الأعلى */
-  right: -10px; /* المسافة من اليمين */
+  top: -5px;
+  right: -10px;
   background-color: red;
   color: white;
-  border-radius: 50%;
-  padding: 2px 6px;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: bold;
-  line-height: 1;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
 }
 
 .form-check-input:checked {
